[gd_scene load_steps=11 format=3 uid="uid://dcb2gmc4jn4eg"]

[ext_resource type="Script" uid="uid://dk0hjniqdxu00" path="res://UI/mainmenu/pause_menu.gd" id="1_e6ceh"]
[ext_resource type="StyleBox" uid="uid://drb4jb5uwpbil" path="res://Resources/team & stylebox/hover_button.tres" id="2_vd60r"]
[ext_resource type="StyleBox" uid="uid://b7ibnlkli38o" path="res://Resources/team & stylebox/normal_button.tres" id="3_fhjt1"]

[sub_resource type="Theme" id="Theme_vd60r"]
Label/colors/font_shadow_color = Color(0, 0, 0, 1)
Label/constants/shadow_offset_x = 5
Label/constants/shadow_offset_y = 5
Label/constants/shadow_outline_size = 10

[sub_resource type="Theme" id="Theme_wixb8"]
Button/styles/hover = ExtResource("2_vd60r")
Button/styles/normal = ExtResource("3_fhjt1")

[sub_resource type="Theme" id="Theme_jmjr7"]
Button/styles/hover = null
Button/styles/normal = null

[sub_resource type="Theme" id="Theme_gt5d3"]
Button/styles/hover = null
Button/styles/normal = null

[sub_resource type="Theme" id="Theme_gscc5"]
Button/styles/hover = null
Button/styles/normal = null

[sub_resource type="Theme" id="Theme_e6ceh"]
Button/styles/hover = null
Button/styles/normal = null

[sub_resource type="Theme" id="Theme_6v8xe"]
Button/styles/hover = null
Button/styles/normal = null

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_e6ceh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -97.5
offset_right = 94.0
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_vd60r")
theme_override_font_sizes/font_size = 65
text = "Pause"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_wixb8")

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = SubResource("Theme_jmjr7")
text = "Resume"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_gt5d3")
text = "Save"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = SubResource("Theme_gscc5")
text = "Options"

[node name="Mainmenu" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_e6ceh")
text = "Mainmenu"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = SubResource("Theme_6v8xe")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Mainmenu" to="." method="_on_mainmenu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
